--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc -b -v",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive build/tests"
   },
   "keywords": [],
   "author": "Marc",
@@ -19,9 +19,13 @@
     "@peregrine/exceptions": "^0.1.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.3.2",
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
+    "@types/mongoose": "^5.3.2",
     "@types/node": "^10.12.10",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "typescript": "^3.1.6"
   }
 }
