--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "Marc",
   "license": "UNLICENSED",
   "dependencies": {
-    "mongoose": "^5.3.14",
+    "@peregrine/exceptions": "^0.1.1",
     "@peregrine/webserver": "^0.1.4",
-    "@peregrine/exceptions": "^0.1.1"
+    "dotenv": "^6.2.0",
+    "mongoose": "^5.3.14"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
