--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.3.2",
