--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "keywords": [],
   "author": "Marc",
   "license": "UNLICENSED",
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "@peregrine/exceptions": "^0.1.1",
     "@peregrine/webserver": "^0.1.4",
