--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc -b -v",
     "start": "node .",
-    "test": "mocha --recursive build/tests"
+    "test": "mocha --recursive build/tests",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "Marc",
