--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,8 +57,8 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "references": [
-    { "path": "./src/main" },
-    { "path": "./src/tests" },
+    { "path": "src/main" },
+    { "path": "src/tests" },
   ],
   "exclude": [
     "node_modules", "**", "*"
